test/de.cau.cs.kieler.klighd.test/sizeEstimationTests/failing/girdPlacement03.kgt
knode {
	properties:
		klighd.testing.expected.^height = 11.0
		klighd.testing.expected.^width = 24.0
	kroundedRectangle (30, 30) {
		grid: columns = 1
		ktext ("Hans") [
			klighd.testing.^height = 11.0
			klighd.testing.^width = 24.0
		] {
			gridData:
				minCellWidth = 24
				minCellHeight = 11
		}
		kchildArea {
			gridData:
		}
	}
	knode {
	}
}